[gd_scene format=3 uid="uid://bnuke7grfywry"]

[ext_resource type="Script" uid="uid://bedh6gk6e1174" path="res://scenes/ui/MainMenu.gd" id="1_6jbdy"]

[sub_resource type="Gradient" id="Gradient_vjtqc"]
offsets = PackedFloat32Array(0, 0.62068963, 0.7126437, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.09803922, 0.09803922, 0.09803922, 1, 0.078431375, 0.078431375, 0.078431375, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6jbdy"]
gradient = SubResource("Gradient_vjtqc")
width = 800
height = 1300
fill = 1

[sub_resource type="LabelSettings" id="LabelSettings_6jbdy"]

[sub_resource type="LabelSettings" id="LabelSettings_iwbf0"]

[node name="MainMenu" type="Control" unique_id=1379807569]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jbdy")

[node name="BackgroundArt" type="TextureRect" parent="." unique_id=635906716]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6jbdy")
expand_mode = 1
stretch_mode = 3

[node name="ColorRect" type="ColorRect" parent="." unique_id=1748177288]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="MainLayout" type="HBoxContainer" parent="." unique_id=809004911]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="LeftColumn" type="CenterContainer" parent="MainLayout" unique_id=854260598]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MainLayout/LeftColumn" unique_id=1709618541]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "LIVE
LONG
FREE"

[node name="RightColumn" type="VBoxContainer" parent="MainLayout" unique_id=1100007085]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30
alignment = 1

[node name="StatsPanel" type="PanelContainer" parent="MainLayout/RightColumn" unique_id=233822147]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/RightColumn/StatsPanel" unique_id=1834479744]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 9

[node name="GoldLabel" type="Label" parent="MainLayout/RightColumn/StatsPanel/VBoxContainer" unique_id=696701902]
layout_mode = 2
text = "Net Worth: 0"
label_settings = SubResource("LabelSettings_6jbdy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillsLabel" type="Label" parent="MainLayout/RightColumn/StatsPanel/VBoxContainer" unique_id=175726729]
layout_mode = 2
text = "Peek Kills: 0"
label_settings = SubResource("LabelSettings_iwbf0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="MainLayout/RightColumn" unique_id=833856683]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Label" type="Label" parent="." unique_id=1947637536]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -23.0
offset_right = 84.5
grow_horizontal = 2
grow_vertical = 0
text = "Numb Thumb Studios"
